--- a/stylesSE.css
+++ b/stylesSE.css
@@ -57,8 +57,8 @@
 }
 
 .small-20{
-    width:20%;
-    height:20%;
+    /* width:20%;
+    height:20%; */
 }
 /* ----------------- ID CSS -----------------*/
 
